# pid-motor-control-esp32

./: .gitignore  README.md  platformio.ini  sim_output.csv
.github/workflows/: ci.yml
host_tests/: CMakeLists.txt  pid_test.cpp
sim/: sim.py
src/: encoder.cpp  encoder.h  logger.cpp  logger.h  main.cpp  motor_driver.cpp  motor_driver.h  pid.cpp  pid.h
